created install.sh, major fixes and patches

--- a/samples/Manifest.json
+++ b/samples/Manifest.json
@@ -19,7 +19,7 @@
         "preinstall": "preinst.sh",
         "postinstall": "postinst.sh"
     },
-    "entrances": {
+    "endpoints": {
         "command": "/bin/command"
     }
 }
